// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`render output stability > badges graph snapshot 1`] = `
"╭─────────────────╮
│ Build      DONE │
╰─────────────────╯
         │
         │
         ▼
╭─────────────────╮
│ Test        WIP │
╰─────────────────╯
         │
         │
         ▼
╭─────────────────╮
│ Deploy  BLOCKED │
╰─────────────────╯"
`;

exports[`render output stability > diamond graph snapshot 1`] = `
"╭──────────────╮
│ Start        │
╰──────────────╯
        │
        ├───────────────────┐
        ▼                   ▼
╭──────────────╮    ╭──────────────╮
│ Left         │    │ Right        │
╰──────────────╯    ╰──────────────╯
        │                   │
        ├───────────────────┘
        ▼
╭──────────────╮
│ End          │
╰──────────────╯"
`;

exports[`render output stability > fan-out graph snapshot 1`] = `
"╭──────────────╮
│ Root         │
╰──────────────╯
        │
        ├───────────────────┬───────────────────┬───────────────────┐
        ▼                   ▼                   ▼                   ▼
╭──────────────╮    ╭──────────────╮    ╭──────────────╮    ╭──────────────╮
│ A            │    │ B            │    │ C            │    │ D            │
╰──────────────╯    ╰──────────────╯    ╰──────────────╯    ╰──────────────╯"
`;

exports[`render output stability > ghost nodes snapshot 1`] = `
"╭╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╮    ╭╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╮
╎ ... 1 ancestor ╎    ╎ ... 1 ancestor ╎
╰╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╯    ╰╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╯
         │                     │
         │                     │
         ▼                     ▼
╭────────────────╮    ╭────────────────╮
│ A              │    │ B              │
╰────────────────╯    ╰────────────────╯
         │                     │
         ├─────────────────────┘
         ▼
╭────────────────╮
│ D              │
╰────────────────╯"
`;

exports[`render output stability > highlighted path snapshot 1`] = `
"╭──────────────╮
│ Start        │
╰──────────────╯
        │
        ├───────────────────┐
        ▼                   ▼
╭──────────────╮    ╭──────────────╮
│ Left         │    │ Right        │
╰──────────────╯    ╰──────────────╯
        │                   │
        ├───────────────────┘
        ▼
╭──────────────╮
│ End          │
╰──────────────╯"
`;

exports[`render output stability > linear chain snapshot 1`] = `
"╭──────────────╮
│ First        │
╰──────────────╯
        │
        │
        ▼
╭──────────────╮
│ Second       │
╰──────────────╯
        │
        │
        ▼
╭──────────────╮
│ Third        │
╰──────────────╯"
`;

exports[`render output stability > selected node snapshot 1`] = `
"╭──────────────╮
│ Alpha        │
╰──────────────╯
        │
        │
        ▼
╭──────────────╮
│ Beta         │
╰──────────────╯"
`;

exports[`render output stability > single node snapshot 1`] = `
"╭──────────────╮
│ Only         │
╰──────────────╯"
`;

exports[`render output stability > two-node linear graph snapshot 1`] = `
"╭──────────────╮
│ Alpha        │
╰──────────────╯
        │
        │
        ▼
╭──────────────╮
│ Beta         │
╰──────────────╯"
`;
